syntax = "proto3";

package sorting.v1;

service MasterService {
  rpc RegisterWorker(WorkerHello) returns (RegisterReply);
}

message WorkerHello {
  string workerId = 1;
  string host     = 2;
  int32 port      = 3;
}

message RegisterReply {
  bool ok = 1;
  string assignedId = 2;
}
